--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <title>Tatum's Travel Blog</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body id="backg">
     <header>
       <h1 id="main-title">Tatum's Travel Blog</h1>
       <p>Tatums Terrific Tales of Tons of Things Travel</p>
